--- a/fslint.glade
+++ b/fslint.glade
@@ -2,7 +2,6 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
-<requires lib="gnome"/>
 
 <widget class="GtkWindow" id="fslint">
   <property name="visible">True</property>
@@ -21,6 +20,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <signal name="destroy" handler="on_fslint_destroy"/>
 
   <child>
@@ -2909,7 +2909,8 @@
 		      <child>
 			<widget class="GtkButton" id="autoMerge">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">All (except selected) using hardlinks</property>
+			  <property name="tooltip" translatable="yes">All (except selected) using hardlinks
+(or symlinks if on a different filesystem)</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -3173,6 +3174,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <property name="show_fileops">True</property>
   <signal name="delete_event" handler="quit"/>
 
@@ -3215,6 +3217,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <property name="has_separator">True</property>
   <signal name="destroy" handler="quit"/>
 
