--- a/fslint.glade
+++ b/fslint.glade
@@ -29,6 +29,149 @@
       <property name="spacing">0</property>
 
       <child>
+	<widget class="GtkMenuBar" id="menubar1">
+
+	  <child>
+	    <widget class="GtkMenuItem" id="file1">
+	      <property name="visible">True</property>
+	      <property name="label">_File</property>
+	      <property name="use_underline">True</property>
+
+	      <child>
+		<widget class="GtkMenu" id="file1_menu">
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="quit">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-quit</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_fslint_destroy" last_modification_time="Tue, 19 Dec 2006 07:58:27 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkMenuItem" id="selection_menu">
+	      <property name="visible">True</property>
+	      <property name="label">_Selection</property>
+	      <property name="use_underline">True</property>
+
+	      <child>
+		<widget class="GtkMenu" id="selection_menu_menu">
+
+		  <child>
+		    <widget class="GtkMenuItem" id="select_using_wildcard">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Select using wildcard</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_select_using_wildcard_activate" last_modification_time="Tue, 19 Dec 2006 07:52:22 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="unselect_using_wildcard">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Unselect using wildcard</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_unselect_using_wildcard_activate" last_modification_time="Tue, 19 Dec 2006 07:52:22 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="groups_menu">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">groups</property>
+		      <property name="use_underline">True</property>
+
+		      <child>
+			<widget class="GtkMenu" id="groups_menu_menu">
+
+			  <child>
+			    <widget class="GtkMenuItem" id="select_all_but_first2">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Select all but first</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_select_all_but_first_in_each_group_activate" last_modification_time="Fri, 22 Dec 2006 08:40:23 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="select_all_but_newest2">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Select all but newest</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_select_all_but_newest_in_each_group_activate" last_modification_time="Fri, 22 Dec 2006 08:40:53 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="select_all_but_oldest2">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Select all but oldest</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_select_all_but_oldest_in_each_group_activate" last_modification_time="Fri, 22 Dec 2006 08:41:05 GMT"/>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="toggle_selection1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Toggle selection</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_toggle_selection_activate" last_modification_time="Tue, 19 Dec 2006 07:52:22 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="unselect_all1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Unselect all</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_unselect_all_activate" last_modification_time="Tue, 19 Dec 2006 07:52:22 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkMenuItem" id="help">
+	      <property name="visible">True</property>
+	      <property name="label">_Help</property>
+	      <property name="use_underline">True</property>
+
+	      <child>
+		<widget class="GtkMenu" id="help_menu">
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="about1">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-about</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_about1_activate" last_modification_time="Tue, 19 Dec 2006 07:58:27 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
 	<widget class="GtkHBox" id="hbox3">
 	  <property name="visible">True</property>
 	  <property name="homogeneous">False</property>
@@ -664,6 +807,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Tue, 12 Dec 2006 18:44:16 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label15">
@@ -1046,6 +1190,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:11:43 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label20">
@@ -1354,6 +1499,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:18:32 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label24">
@@ -1565,6 +1711,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:18:52 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label29">
@@ -1818,6 +1965,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:19:04 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label34">
@@ -1938,6 +2086,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:19:19 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label37">
@@ -2109,6 +2258,7 @@
 			  <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			  <property name="show_titles">True</property>
 			  <property name="shadow_type">GTK_SHADOW_IN</property>
+			  <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:19:32 GMT"/>
 
 			  <child>
 			    <widget class="GtkLabel" id="label43">
@@ -2241,6 +2391,7 @@
 			      <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			      <property name="show_titles">True</property>
 			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:19:47 GMT"/>
 
 			      <child>
 				<widget class="GtkLabel" id="label45">
@@ -2374,6 +2525,7 @@
 			  <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 			  <property name="show_titles">True</property>
 			  <property name="shadow_type">GTK_SHADOW_IN</property>
+			  <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 19:20:00 GMT"/>
 
 			  <child>
 			    <widget class="GtkLabel" id="label48">
@@ -2665,14 +2817,14 @@
 		      <property name="spacing">2</property>
 
 		      <child>
-			<widget class="GtkButton" id="toggleSelection">
+			<widget class="GtkButton" id="selection">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">selection</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
-			  <signal name="clicked" handler="on_toggleSelection_clicked"/>
+			  <signal name="button_press_event" handler="on_selection_menu_button_press_event" last_modification_time="Mon, 18 Dec 2006 07:39:17 GMT"/>
+			  <signal name="clicked" handler="on_selection_clicked" last_modification_time="Mon, 18 Dec 2006 08:20:59 GMT"/>
 
 			  <child>
 			    <widget class="GtkAlignment" id="alignment5">
@@ -2712,7 +2864,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label59">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Toggle</property>
+				      <property name="label" translatable="yes">Select</property>
 				      <property name="use_underline">True</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2743,7 +2895,7 @@
 		      <child>
 			<widget class="GtkButton" id="saveAs">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">list to file</property>
+			  <property name="tooltip" translatable="yes">Save (selected) list to file</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
