Various cleanups getting ready for 2.18 release
git-svn-id: https://fslint.googlecode.com/svn/trunk@24 494acc53-a219-0410-adff-8f8ff343f446

--- a/fslint.glade
+++ b/fslint.glade
@@ -83,7 +83,7 @@
 		  <child>
 		    <widget class="GtkMenuItem" id="groups_menu">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">groups</property>
+		      <property name="label" translatable="yes">within groups</property>
 		      <property name="use_underline">True</property>
 
 		      <child>
