--- a/fslint.glade
+++ b/fslint.glade
@@ -3448,10 +3448,9 @@
 </widget>
 
 <widget class="GtkDialog" id="UserInteraction">
-  <property name="visible">True</property>
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">True</property>
   <property name="default_width">150</property>
   <property name="default_height">100</property>
