--- a/fslint.glade
+++ b/fslint.glade
@@ -963,8 +963,8 @@
 				  <property name="border_width">1</property>
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="n_columns">3</property>
-				  <property name="column_widths">80,80,80</property>
+				  <property name="n_columns">4</property>
+				  <property name="column_widths">80,80,80,80</property>
 				  <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
 				  <property name="show_titles">True</property>
 				  <property name="shadow_type">GTK_SHADOW_IN</property>
@@ -1014,6 +1014,25 @@
 				  <child>
 				    <widget class="GtkLabel" id="label70">
 				      <property name="label">Size_for_Sort</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_RIGHT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">7.45058015283e-09</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				  </child>
+
+				  <child>
+				    <widget class="GtkLabel" id="label71">
+				      <property name="label">Selection_for_Sort</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_RIGHT</property>
