Add support for opening files in the default desktop application. This is done with os.system("xdg-open") and triggered with Enter, Ctrl-O or double-click on a file.
git-svn-id: https://fslint.googlecode.com/svn/trunk@171 494acc53-a219-0410-adff-8f8ff343f446

--- a/fslint.glade
+++ b/fslint.glade
@@ -64,6 +64,15 @@
 		<widget class="GtkMenu" id="edit_menu_menu">
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="open">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-open</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_open_activate" last_modification_time="Fri, 05 Sep 2008 07:01:52 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="copy">
 		      <property name="visible">True</property>
 		      <property name="label">gtk-copy</property>
