--- a/fslint.glade
+++ b/fslint.glade
@@ -2914,7 +2914,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label75">
 				      <property name="visible">True</property>
-				      <property name="label">Pause</property>
+				      <property name="label" translatable="yes">Pause</property>
 				      <property name="use_underline">True</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2989,7 +2989,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label76">
 				      <property name="visible">True</property>
-				      <property name="label">Resume</property>
+				      <property name="label" translatable="yes">Resume</property>
 				      <property name="use_underline">True</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
