--- a/fslint.glade
+++ b/fslint.glade
@@ -118,7 +118,7 @@
 		  <child>
 		    <widget class="GtkMenuItem" id="select_from_same_folder">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Select from same folder</property>
+		      <property name="label" translatable="yes">Select all in this directory</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_select_from_that_folder_activate" last_modification_time="Fri, 09 Dec 2011 14:54:12 GMT"/>
 		    </widget>
